Fix paragraph and heading spacing

--- a/css/app/common.css
+++ b/css/app/common.css
@@ -17,22 +17,32 @@ body {
 h1 {
     font-size: 2.2em;
     text-align: center;
+    margin-top: 1.4em;
+    margin-bottom: 0.6em;
 }
 
 h2 {
     font-size: 1.4em;
+    margin-top: 1.4em;
+    margin-bottom: 0.5em;
 }
 
 h3 {
     font-size: 1.3em;
+    margin-top: 1.2em;
+    margin-bottom: 0.4em;
 }
 
 h4 {
     font-size: 1.2em;
+    margin-top: 1.1em;
+    margin-bottom: 0.4em;
 }
 
 h5 {
     font-size: 1.1em;
+    margin-top: 1em;
+    margin-bottom: 0.4em;
 }
 
 h1,
@@ -46,6 +56,7 @@ h5 {
 
 p {
     font-size: 1em;
+    margin-bottom: 1em;
 }
 
 a,
